# CustomObjectsAPI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/: ContainerGameObject.hpp  CustomEffectGameObject.hpp  CustomGameObject.hpp  CustomObjectBase.hpp  CustomObjectUtils.hpp  CustomObjectsAPI.hpp  CustomObjectsDLL.hpp  CustomObjectsManager.hpp  CustomObjectsSheet.hpp  CustomObjectsStructs.hpp  CustomSpritesManager.hpp  ModTriggerObject.hpp
include/config/: CustomSpriteConfig.hpp
include/data/: CustomObjectConfig.hpp  CustomObjectsMod.hpp  CustomSheetSprite.hpp  CustomSpriteConfig.hpp
include/object/: CustomAnimatedObject.hpp  CustomCollectibleObject.hpp  CustomEffectGameObject.hpp  CustomGameObject.hpp  CustomObjectBase.hpp  CustomObjectUtils.hpp  CustomPadObject.hpp  CustomPortalObject.hpp  CustomRingGameObject.hpp  CustomRingObject.hpp  CustomRotateObject.hpp  CustomTriggerObject.hpp  ModTriggerObject.hpp
include/rectpack2D/: empty_space_allocators.hpp  empty_spaces.hpp  insert_and_split.hpp
include/sprite/: CustomObjectsSheet.hpp  CustomSheetSprite.hpp
include/struct/: CustomObject.hpp  CustomObjectConfig.hpp  (+4 more)
objects/: CustomAnimatedObject.hpp  CustomCollectibleObject.hpp  CustomGameObject.hpp  CustomPadObject.hpp  CustomPortalObject.hpp  CustomRingObject.hpp  CustomRotateObject.hpp  CustomTriggerObject.hpp
src/: CustomEditorTab.cpp  CustomObjects.cpp  CustomObjectsAPI.cpp  CustomObjectsManager.cpp  CustomObjectsSheet.cpp  CustomSpritesManager.cpp  main.cpp
(+25 files in other folders)
